--- a/signup.html
+++ b/signup.html
@@ -10,13 +10,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-	    <!--JS
-			<script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.12.0/validate.min.js"></script>;
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-			<script src="js/check.js"></script>
-			-->
-		<!--JS-->
+	   
+	    <script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
+		
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
@@ -45,8 +41,8 @@
                         <form method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="使用者名稱" id="name" placeholder="帳號"/>
-								<div class="messages"></div>
+                                <input type="text" name="使用者名稱" id="name" placeholder="帳號" required="required"/>
+								<div class="help-block with-errors"></div>
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
@@ -77,7 +73,20 @@
             </div>
         </section>
 	
+		<!--引用 Validator-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
 
+		<!--執行 Validator-->
+		<script>
+		$('#register_form').validator().on('submit', function(e) {
+		if (e.isDefaultPrevented()) { // 未驗證通過 則不處理
+		return;
+		} else { // 通过后，送出表单
+		alert("已送出表單");
+		}
+		e.preventDefault(); // 防止原始 form 提交表单
+		});
+		</script>
 
 	</body>
 </html>
