--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">註冊</h2>
-                        <form method="POST" class="register-form" id="register-form">
+                        <form id="register_form" role="form" data-toggle="validator">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="使用者名稱" id="name" placeholder="帳號" required="required"/>
