--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="使用者名稱" id="name" placeholder="帳號" required="required"/>
-								<div class="help-block with-errors"></div>
+								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
