--- a/signup.html
+++ b/signup.html
@@ -46,15 +46,18 @@
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="信箱"/>
+                                <input type="email" name="email" id="email" placeholder="信箱" required="required"/>
+								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="密碼"/>
+                                <input type="password" name="pass" id="pass" placeholder="密碼" required="required"/>
+								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="重複密碼"/>
+                                <input type="password" name="re_pass" id="re_pass" placeholder="重複密碼" required="required"/>
+								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
