--- a/signup.html
+++ b/signup.html
@@ -39,27 +39,27 @@
                     <div class="signup-form">
                         <h2 class="form-title">註冊</h2>
                         <form id="register_form" role="form" data-toggle="validator">
-                            <div class="form-group">
+                            <div class="form-group foghe">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="使用者名稱" id="name" placeholder="帳號" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group foghe">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
                                 <input type="email" name="email" id="email" placeholder="信箱" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group foghe">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
                                 <input type="password" name="pass" id="pass" placeholder="密碼" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group foghe">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
                                 <input type="password" name="re_pass" id="re_pass" placeholder="重複密碼" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group foghe">
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>我同意  <a href="#" class="term-service">使用者規約</a></label>
                             </div>
