--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE HTML>
-
+<!--
+	Ion by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
 	<head>
-		<title>NKUST</title>
+		<title>TEST</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
