--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,17 @@
 <!DOCTYPE HTML>
-
+<!--
+	Ion by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
 	<head>
-		<title>NKUST</title>
+		<title>Ion by TEMPLATED</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 	   
-			<script src='js/jquery.min.js'></script>
+			<script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js'></script>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
@@ -37,21 +41,21 @@
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="使用者名稱" id="name" placeholder="帳號" required="required"/>
-								<div  class="help-block with-errors messages" ></div>
+								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="信箱" data-error="郵件格式錯誤" required="required"/>
+                                <input type="email" name="email" id="email" placeholder="信箱" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="密碼"pattern="^(?=.*\d)(?=.*[a-zA-Z]).{6,}$" data-error="請輸入含有英文字母及數字的密碼，至少六個字元。"required="required"/>
+                                <input type="password" name="pass" id="pass" placeholder="密碼" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="重複密碼" data-match="#pass" data-error="密碼未吻合！" required="required"/>
+                                <input type="password" name="re_pass" id="re_pass" placeholder="重複密碼" required="required"/>
 								<div class="help-block with-errors messages"></div>
                             </div>
                             <div class="form-group">
@@ -80,7 +84,7 @@
 		if (e.isDefaultPrevented()) { // 未驗證通過 則不處理
 		return;
 		} else { // 通过后，送出表单
-		alert("成功註冊");
+		alert("已送出表單");
 		}
 		e.preventDefault(); // 防止原始 form 提交表单
 		});
