--- a/signin.html
+++ b/signin.html
@@ -43,12 +43,12 @@
 							<form id="register_form" role="form" data-toggle="validator">
 								<div class="form-group">
 									<label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-									<input type="text" name="your_name" id="your_name" placeholder="帳號"/ required="required">
+									<input type="text" name="your_name" id="your_name" placeholder="帳號"/ required="required" pattern="^[a-zA-Z0-9]{1,}$"  data-pattern-error="使用字元錯誤" data-error="請輸入帳號">
 									<div  class="help-block with-errors messages" ></div>
 								</div>
 								<div class="form-group">
 									<label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-									<input type="password" name="your_pass" id="your_pass" placeholder="密碼"/ required="required">
+									<input type="password" name="your_pass" id="your_pass" placeholder="密碼"/ required="required" required="required"  data-error="請輸入密碼">
 									<div  class="help-block with-errors messages" ></div>
 								</div>
 								<div class="form-group">
@@ -73,7 +73,7 @@
 			if (e.isDefaultPrevented()) { // 未驗證通過 則不處理
 			return;
 			} else { // 通过后，送出表单
-			alert("成功註冊");
+			alert("成功登入");
 			}
 			e.preventDefault(); // 防止原始 form 提交表单
 			});
