--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -6,44 +6,52 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-	
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<style>
+			.w3-chinese {
+				  font-family: '微軟正黑體', serif; 
+			}
+		</style>
 	</head>
-	<body id="top">
+	<body class="w3-chinese">
+	<!--header-->
+		<div class="w3-top ">
+			<div class="w3-bar w3-white w3-card w3-padding">
+				<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+				<a href="#" class="w3-bar-item w3-left   w3-large">NKUST</a>
+				<a href="#" class="w3-bar-item w3-right w3-button w3-large w3-round-xxlarge w3-light-blue w3-hide-small w3-text-white" >登入</a>
+				<a href="#" class="w3-bar-item w3-right w3-button w3-large w3-hide-small">頁面 1</a>
+				<a href="#" class="w3-bar-item w3-right w3-button w3-large w3-hide-small">頁面 2</a>
+				<a href="#" class="w3-bar-item w3-right w3-button w3-large w3-hide-small">頁面 3</a>
 
-		<!-- Header -->
-			<header id="header">
-				<h1><a href="#">NKUST</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">首頁</a></li>
-						<li><a href="left-sidebar.html">還不知道幹嘛</a></li>
-						<li><a href="right-sidebar.html">也是不知道</a></li>
-						<li><a href="no-sidebar.html">隨便啦</a></li>
-						<li><a href="#" class="button special">登入</a></li>
-					</ul>
-				</nav>
-			</header>
+
+			</div>
+		</div>
+	<!--main-->
+		<div class="w3-display-container w3-center" >
+			<img src="images/bk4.jpg" style="width:100%">
+			<div class="w3-display-middle w3-container w3-text-white  " style="width:100%" >
 			
-		<!-- Banner -->
-		<section id="banner">
-			<div class="inner">
-				<h2>歡迎加入</h2>
-				<p>影音平台合租</p>
-				<ul class="actions">
-					<li><a href="signin.html" class="button big special">登入</a></li>
-					<li><a href="signup.html" class="button big alt">註冊</a></li>
-				</ul>
+			  <h1 class="w3-hide-small w3-jumbo ">歡迎加入</h1>
+			  </br>
+			  <h5><b>網路影音合租平台</b></h5>   
+			  </br>
+			  <a href="#" class=" w3-button w3-large  w3-light-blue  w3-text-white w3-margin-right w3-margin-right w3-margin-left" style="width:15%" >登入</a>
+			  <a href="#" class=" w3-button w3-large  w3-border      w3-text-white w3-margin-right w3-margin-right w3-margin-left" style="width:15%" >註冊</a>
+			  </br>
 			</div>
 			
-		</section>
+        </div>
 		
-		
+		<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+		  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+		  <i class="fa fa-instagram w3-hover-opacity"></i>
+		  <i class="fa fa-snapchat w3-hover-opacity"></i>
+		  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+		  <i class="fa fa-twitter w3-hover-opacity"></i>
+		  <i class="fa fa-linkedin w3-hover-opacity"></i>
+		  <p class="w3-medium">make by Daniel</p>
+		</footer>
 	
-
-
-	</body>
 </html>
