--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>NKUST</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
