--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<body class="w3-chinese">
 	<!--header-->
 		<div class="w3-top ">
-			<div class="w3-bar w3-white w3-card w3-padding">
-				<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+			<div class="w3-bar w3-white w3-card w3-padding w3-hide-small">
+				
 				<a href="#" class="w3-bar-item w3-left   w3-large">NKUST</a>
 				<a href="#" class="w3-bar-item w3-right w3-button w3-large w3-round-xxlarge w3-light-blue w3-hide-small w3-text-white" >登入</a>
 				<a href="#" class="w3-bar-item w3-right w3-button w3-large w3-hide-small">頁面 1</a>
@@ -28,6 +28,7 @@
 
 
 			</div>
+			<a class="w3-bar-item w3-button w3-white w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 		</div>
 	<!--main-->
 		<div class="w3-display-container w3-center" >
@@ -38,8 +39,8 @@
 			  </br>
 			  <h5><b>網路影音合租平台</b></h5>   
 			  </br>
-			  <a href="#" class=" w3-button w3-large  w3-light-blue  w3-text-white w3-margin-right w3-margin-right w3-margin-left" style="width:15%" >登入</a>
-			  <a href="#" class=" w3-button w3-large  w3-border      w3-text-white w3-margin-right w3-margin-right w3-margin-left" style="width:15%" >註冊</a>
+			  <a href="#" class=" w3-button w3-large  w3-light-blue  w3-text-white w3-margin-right w3-margin-right w3-margin-left" style="width:20%" >登入</a>
+			  <a href="#" class=" w3-button w3-large  w3-border      w3-text-white w3-margin-right w3-margin-right w3-margin-left" style="width:20%" >註冊</a>
 			  </br>
 			</div>
 			
