--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 			.w3-chinese {
 				  font-family: '微軟正黑體', serif; 
 			}
+			
+			body, html {height: 100%}
+			.bgimg {
+			  background-image: url('images/bk4.jpg');
+			  min-height: 100%;
+			  background-position: center;
+			  background-size: cover;
+			}
+
 		</style>
 	</head>
 	<body class="w3-chinese">
@@ -31,8 +40,8 @@
 			<a class="w3-bar-item w3-button w3-white w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 		</div>
 	<!--main-->
-		<div class="w3-display-container w3-center" >
-			<img src="images/bk4.jpg" style="width:100%">
+		<div class=" bgimg w3-display-container w3-center" >
+
 			<div class="w3-display-middle w3-container w3-text-white  " style="width:100%" >
 			
 			  <h1 class="w3-hide-small w3-jumbo ">歡迎加入</h1>
