--- a/index.html
+++ b/index.html
@@ -9,20 +9,8 @@
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<style>
-			.w3-chinese {
-				  font-family: '微軟正黑體', serif; 
-			}
-			
-			body, html {height: 100%}
-			.bgimg {
-			  background-image: url('images/bk4.jpg');
-			  min-height: 100%;
-			  background-position: center;
-			  background-size: cover;
-			}
-
-		</style>
+		<link rel="stylesheet" href="css/style.css" >
+		<script src='js/myjs.js'></script>
 	</head>
 	<body class="w3-chinese">
 	<!--header-->
@@ -79,21 +67,6 @@
 		
 		
 		
-		<script>
-			
-
-			// Used to toggle the menu on small screens when clicking on the menu button
-			function myFunction() {
-			  var x = document.getElementById("navDemo");
-			  if (x.className.indexOf("w3-show") == -1) {
-				x.className += " w3-show";
-			  } else { 
-				x.className = x.className.replace(" w3-show", "");
-			  }
-			}
-
-			
-		</script>
 		
 		
 		
