--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=big5">
 <meta http-equiv="Content-Language" content="zh-tw">
 <base target="_self">
-<style fprolloverstyle>A:hover {color: #FFD700; font-family: 華康新篆體}
+<style fprolloverstyle>A:hover {color: #FFD700; font-family: 新細明體}
 </style>
 </head>
 
