--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body bgcolor="#004000" style="line-height:168%" leftmargin="120" topmargin="40">
 
-<p align="right"><font color="#FFFF00" size="5" face="華康瘦金體">
+<p align="right"><font color="#FFFF00" size="5" face="新細明體">
 <span style="display:none;mso-hide:all">許興讓記</span></font> </p>
 <span style="font-weight: 400">
 <body text="#FFFFFF" link="#FFCCCC" vlink="#FFCCCC" alink="#FFCC99" bgcolor="#004000" leftmargin="120" topmargin="60">
@@ -19,7 +19,7 @@
 	<span onmouseover="style.color= 'white';" onmouseout="style.color= 'gold';">
 	<font face="華康瘦金體" color="#FFFFFF" size="6">
 	<li style="line-height:168%">
-	<a href="三國志.htm" style="text-decoration: none"><font color="#FFD700" face="華康瘦金體" size="6">〔　三　國　志　〕　目　錄</font></a>
+	<a href="三國志.htm" style="text-decoration: none"><font color="#FFD700" face="新細明體" size="6">〔　三　國　志　〕　目　錄</font></a>
 	<ol>
 		<li>魏書
 		<ol>
@@ -1096,10 +1096,10 @@
 </span><br>
 <p align="center">
 <a href="../廿五史目錄.htm" style="text-decoration: none">
-<font size="5" face="華康新篆體">〔返回廿五史目錄〕</font></a><br>
+<font size="5" face="新細明體">〔返回廿五史目錄〕</font></a><br>
 </p>
 <br>
-<p align="right"><font color="#FF0000" size="4" face="華康瘦金體">《澎湖許興讓電子書試編》</font><font color="#FFFF00" size="5" face="華康瘦金體"><span style="display:none;mso-hide:all">許興讓記</span></font>
+<p align="right"><font color="#FF0000" size="4" face="新細明體">《澎湖許興讓電子書試編》</font><font color="#FFFF00" size="5" face="新細明體"><span style="display:none;mso-hide:all">許興讓記</span></font>
 </p>
 
 </body>
