--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
 <title>三國志目錄</title>
-<meta http-equiv="Content-Type" content="text/html; charset=big5">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="zh-tw">
 <base target="_self">
 <style fprolloverstyle>A:hover {color: #FFD700; font-family: 新細明體}
