--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <title>三國志目錄</title>
 <meta http-equiv="Content-Type" content="text/html; charset=big5">
 <meta http-equiv="Content-Language" content="zh-tw">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <base target="_self">
 <style fprolloverstyle>A:hover {color: #FFD700; font-family: 華康新篆體}
 </style>
 </head>
 
-<body class="w3-chinese" bgcolor="#004000" style="line-height:168%" leftmargin="120" topmargin="40" >
+<body bgcolor="#004000" style="line-height:168%" leftmargin="120" topmargin="40">
 
 <p align="right"><font color="#FFFF00" size="5" face="華康瘦金體">
 <span style="display:none;mso-hide:all">許興讓記</span></font> </p>
